@@ -41,7 +41,6 @@ from modules.cpp_style_unittest import *
 from modules.diff_parser_unittest import *
 from modules.logging_unittest import *
 from modules.multicommandtool_unittest import *
-from modules.patchcollection_unittest import *
 from modules.scm_unittest import *
 from modules.webkitport_unittest import *
 from modules.workqueue_unittest import *
