@@ -1,5 +1,17 @@
 2009-12-09  Adam Barth  <abarth@webkit.org>
 
+        Reviewed by Eric Seidel.
+
+        [bzt] Remove unused PatchCollection class
+        https://bugs.webkit.org/show_bug.cgi?id=32312
+
+        It's dead code.
+
+        * Scripts/modules/patchcollection.py:
+        * Scripts/modules/patchcollection_unittest.py: Removed.
+
+2009-12-09  Adam Barth  <abarth@webkit.org>
+
         Unreviewed "build" fix.  CheckStyle needs a --no-upate option.
 
         * Scripts/modules/commands/download.py:
